*SVN*

* Fixed JavascriptHelper#visual_effect to use camelize such that :blind_up will work #1639 [pelletierm@eastmedia.net]

* Fixed that a SessionRestoreError was thrown if a model object was placed in the session that wasn't available to all controllers. This means that it's no longer necessary to use the 'model :post' work-around in ApplicationController to have a Post model in your session.


*1.9.0* (6 July, 2005)

* Added logging of the request URI in the benchmark statement (makes it easy to grep for slow actions)

* Added javascript_include_tag :defaults shortcut that'll include all the default javascripts included with Action Pack (prototype, effects, controls, dragdrop)

* Cache several controller variables that are expensive to calculate #1229 [skaes@web.de]

* The session class backing CGI::Session::ActiveRecordStore may be replaced with any class that duck-types with a subset of Active Record.  See docs for details #1238 [skaes@web.de]

* Fixed that hashes was not working properly when passed by GET to lighttpd #849 [Nicholas Seckar]

* Fixed assert_template nil will be true when no template was rendered #1565 [maceywj@telus.net]

* Added :prompt option to FormOptions#select (and the users of it, like FormOptions#select_country etc) to create "Please select" style descriptors #1181 [Michael Schuerig]

* Added JavascriptHelper#update_element_function, which returns a Javascript function (or expression) that'll update a DOM element according to the options passed #933 [mortonda@dgrmm.net]. Examples:

    <%= update_element_function("products", :action => :insert, :position => :bottom, :content => "<p>New product!</p>") %>

    <% update_element_function("products", :action => :replace, :binding => binding) do %>
      <p>Product 1</p>
      <p>Product 2</p>
    <% end %>

* Added :field_name option to DateHelper#select_(year|month|day) to deviate from the year/month/day defaults #1266 [Marcel Molina]
